html base for the box model exercise

--- a/Atividades/S2-CSS/s2-18-box-model/index.html
+++ b/Atividades/S2-CSS/s2-18-box-model/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box model</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>💪 Atividade: Box Model e Espaçamentos</title>
+  </head>
+
+  <!--Os comentários abaixo são apenas explicações sobre cada linha. 
+        NÃO deixe comentários em entregas e/ou projetos realizados, apenas em casos solicitados.-->
+
+  <!-- Início do elemento <body>, que representa o conteúdo principal de um documento HTML -->
+  <body>
+    <!-- Início do cabeçalho de nível 1 (<h1>) com a classe "centered", que define o título "Kenzie Academy Brasil" -->
+    <h1 class="centered">Kenzie Academy Brasil</h1>
+    <!-- Início de um parágrafo (<p>) com a classe "uppercase", que exibe o texto "Nosso foco é tranformar vidas" em letras maiúsculas -->
+    <p class="uppercase">Nosso foco é tranformar vidas</p>
+
+    <!-- Início do cabeçalho de nível 2 (<h2>) com o texto "Se torne uma" seguido de uma <span> com a classe "text-blue" que envolve o texto "pessoa desenvolvedora", e em seguida, o restante do cabeçalho -->
+    <h2>
+      Se torne uma <span class="text-blue">pessoa desenvolvedora</span> em 1 ano
+    </h2>
+
+    <!-- Início de um parágrafo (<p>) com um texto e um link (<a>) com a classe "text-blue" e o atributo "href" que redireciona para "https://kenzie.com.br" quando clicado -->
+    <p>
+      Saiba mais sobre os nosso programas
+      <a class="text-blue" href="https://kenzie.com.br">clicando aqui</a>
+    </p>
+
+    <!-- Início do cabeçalho de nível 2 (<h2>) com o texto "Sobre nós" -->
+    <h2>Sobre nós</h2>
+
+    <!-- Início de uma seção (<section>) com a classe "bg-blue", que define um fundo azul para o conteúdo dentro dela -->
+    <section class="bg-blue">
+      <!-- Início de um parágrafo (<p>) que contém informações sobre a Kenzie Academy -->
+      <p>
+        A Kenzie Academy começou em 2017, nos Estados Unidos, e chegou ao Brasil
+        em 2019 com o objetivo de formar profissionais completos para
+        ingressarem no mercado de tecnologia rapidamente.
+      </p>
+      <!-- Início de um parágrafo (<p>) que destaca que não há mensalidade e enfatiza a alta qualidade de ensino -->
+      <p>Tudo isso sem mensalidade e com alta qualidade de ensino.</p>
+    </section>
+
+    <!-- Início do cabeçalho de nível 2 (<h2>) com o texto "Programas" seguido de uma <span> com a classe "text-blue" que envolve o texto "oferecidos", e em seguida, o restante do cabeçalho -->
+    <h2>Programas <span class="text-blue">oferecidos</span></h2>
+    <!-- Início de uma lista ordenada (<ol>) -->
+    <ol>
+      <!-- Início de um item de lista (<li>) com o texto "Software Engineering" -->
+      <li>Software Engineering</li>
+      <!-- Início de um item de lista (<li>) com o texto "UX Engineering" -->
+      <li>UX Engineering</li>
+      <!-- Início de um item de lista (<li>) com o texto "Digital Marketing" -->
+      <li>Digital Marketing</li>
+      <!-- Fim da lista ordenada (<ol>) -->
+    </ol>
+    <!-- Início de rodapé (<footer>) -->
+    <footer class="footer">
+      <!-- Início de um paragrafo (<p>) com o texto "Todos os direitos reservados" -->
+      <p class="footer-p">Todos os direitos reservados</p>
+    </footer>
+    <!-- Fim do elemento <body> -->
+  </body>
 </html>
