exercicio: reproduzir design da imagem fornecida

--- a/Atividades/S2-CSS/s2-18-box-model/index.html
+++ b/Atividades/S2-CSS/s2-18-box-model/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
     <title>💪 Atividade: Box Model e Espaçamentos</title>
   </head>
@@ -24,7 +25,7 @@
     </h2>
 
     <!-- Início de um parágrafo (<p>) com um texto e um link (<a>) com a classe "text-blue" e o atributo "href" que redireciona para "https://kenzie.com.br" quando clicado -->
-    <p>
+    <p class="programas">
       Saiba mais sobre os nosso programas
       <a class="text-blue" href="https://kenzie.com.br">clicando aqui</a>
     </p>
@@ -35,13 +36,13 @@
     <!-- Início de uma seção (<section>) com a classe "bg-blue", que define um fundo azul para o conteúdo dentro dela -->
     <section class="bg-blue">
       <!-- Início de um parágrafo (<p>) que contém informações sobre a Kenzie Academy -->
-      <p>
+      <p id="primeiro-paragrafo">
         A Kenzie Academy começou em 2017, nos Estados Unidos, e chegou ao Brasil
         em 2019 com o objetivo de formar profissionais completos para
         ingressarem no mercado de tecnologia rapidamente.
       </p>
       <!-- Início de um parágrafo (<p>) que destaca que não há mensalidade e enfatiza a alta qualidade de ensino -->
-      <p>Tudo isso sem mensalidade e com alta qualidade de ensino.</p>
+      <p><strong>Tudo isso sem mensalidade e com alta qualidade de ensino</strong>.</p>
     </section>
 
     <!-- Início do cabeçalho de nível 2 (<h2>) com o texto "Programas" seguido de uma <span> com a classe "text-blue" que envolve o texto "oferecidos", e em seguida, o restante do cabeçalho -->
