--- a/Atividades/S6-Loops/s6-03-for1/index.html
+++ b/Atividades/S6-Loops/s6-03-for1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Looop For</title>
     <script src="script.js"></script>
+    <script src="script2.js"></script>
 </head>
 <body>
     <h1>Loops</h1>
