--- a/Atividades/S6-Loops/s6-03-for1/index.html
+++ b/Atividades/S6-Loops/s6-03-for1/index.html
@@ -6,6 +6,7 @@
     <title>Looop For</title>
     <script src="script.js"></script>
     <script src="script2.js"></script>
+    <script src="script3.js"></script>
 </head>
 <body>
     <h1>Loops</h1>
