S6-09 | 💪 Atividade: Funções com Arrays

--- a/Atividades/S6-Loops/s6-08-arrays/index.html
+++ b/Atividades/S6-Loops/s6-08-arrays/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport">
     <title>Arrays</title>
     <script src="script.js"></script>
+    <script src="script2.js"></script>
 </head>
 <body>
     <h1>Arrays</h1>
